<resources>
    <string name="app_name">健康管家</string>
    <string name="user_name">使用手机号码登录</string>
    <string name="user_pwd">请输入密码</string>
    <string name="login">登 录</string>
    <string name="fgkey">忘记密码？</string>
    <string name="register">注   册</string>
    <string name="input_name">请输入用户名</string>
    <string name="input_pwd">请输入密码</string>
    <string name="confirm">请再次输入密码</string>
    <string name="input_mobile">请输入手机号码</string>
    <string name="i_agree">我同意</string>
    <string name="change_account">账号切换</string>
    <string name="add_account">添加账号</string>
    <string name="empty_account">输入账号不能为空</string>
    <string name="empty_pwd">输入密码不能为空</string>
    <string name="empty_name">输入姓名不能为空</string>
    <string name="empty_address">输入地址不能为空</string>
    <string name="empty_phone">请输入手机号码</string>
    <string name="agree_sure">请同意用户协议</string>
    <string name="sure">下一步</string>
    <string name="do_register">正在注册...</string>
    <string name="do_login">正在登录</string>
    <string name="do_uploading">正在上传</string>
    <string name="do_loading">正在加载</string>
    <string name="register_info">注册信息</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="address">地址</string>
    <string name="birthday">出生年月</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="telephone">手机号码</string>
    <string name="pwd_set">设置密码</string>
    <string name="next_step">下一步</string>
    <string name="history_disease">既往病史</string>
    <string name="health_record">健康档案</string>
    <string name="sign_logo">\&#064;国辰迈联机器人--2017-2019</string>
    <string name="sign_copy">\&#064;杭州国辰迈联机器人科技有限公司</string>
    <string name="xueya">血压</string>
    <string name="xuetang">血糖</string>
    <string name="wendu">温度</string>
    <string name="tizhong">体重</string>
    <string name="xueyang">血氧</string>
    <string name="logout">退出登录</string>
    <string name="speak_no_result">我还没学习到</string>
    <string name="offline_sign">线下签约</string>
    <string name="submit">提交</string>
    <string name="connect_connect_off">与设备连接断开</string>
    <string name="measure_ecg_file_ing">正在接收文件</string>
    <string name="measure_ecg_file_end">接收完成</string>
    <string name="measure_ecg_time_out">接收超时</string>
    <string name="measure_ecg_time_err">接收文件出错</string>
    <string name="measure_lead_off">导联脱落</string>
    <string name="const_data_nodata">--</string>
    <string name="connect_opening">正在打开蓝牙</string>
    <string name="connect_openfail">蓝牙打开失败</string>
    <string name="connect_startseach">正在搜索设备</string>
    <string name="connect_startconnect">正在与设备建立连接</string>
    <string name="connect_success">与设备成功连接</string>
    <string name="connect_fail">与设备连接失败 点击重新开始连接</string>
    <string name="connect_close">检测到蓝牙被关闭 操作失败</string>
    <string name="no_yz">目前还没有消息</string>
    <string name="tips_wendu_one">请取出5号仪器，耳温枪</string>
    <string name="tips_wendu_two">拆下防尘盖，按下电源按钮</string>
    <string name="tips_wendu_three">把测温头伸入耳道，按下并松开测温按钮，显示测温</string>
    <string name="tips_xueya_one">请取出一号仪器，血压计</string>
    <string name="tips_xueya_two">将手穿过绷带孔，放置于肘关节上方2厘米处，与心脏位置齐平，
        并扎紧绷带，按下开关键，进行测试，请耐心等待测量结果</string>
    <string name="tips_xuetang_one">取出采血笔，将采血针装入采血笔，拧下保护套，旋转采血笔头，
        旋转头部调整扎针深度，拉一下采血笔尾部开始扎针测量，快速拿出试纸，插入血糖仪</string>
    <string name="tab_disease_one">疾病综述</string>
    <string name="tab_disease_two">饮食建议</string>
    <string name="tab_disease_three"></string>
    <string name="add_volume">调大声音</string>
    <string name="reduce_volume">调小声音</string>
    <string name="max_volume">当前已经是最大声音了</string>
    <string name="min_volume">当前已经是最小声音了</string>
    <string name="version_update_title">版本更新</string>
    <string name="version_update_new_verion_message">检测到新版本，建议您更新！</string>
    <string name="version_update_action_download_title">新版本下载...</string>
    <string name="version_update_action_download">下载安装</string>
    <string name="version_update_action_later">以后再说</string>
    <string name="version_update_action_cancel">取消</string>
    <string name="version_update_url_error_message">版本更新链接错误！</string>
    <string name="tips_splash">您好，我是您的健康机器人管家小易，接下来将由我为您开启健康之旅。</string>
    <string name="tips_login">主人，如果您有账号，请直接登入；首次使用请点击注册。</string>
    <string name="tips_register">主人，为了更好地为您服务，需要您填写您的个人信息，填写完毕后点击下一步</string>
    <string name="tips_disease">主人，为了全部掌握您的健康信息，如果您有病史请选择对应标签，然后点击下一步</string>
    <string name="tips_face">主人，让我给您拍个照，下次我就认识您啦</string>
    <string name="tips_doctor">主人，请选择您最信任的医生完成签约，如果他没在里面可以点击右下角的线下签约按钮。</string>
    <string name="tips_info">主人，如果需要签约就点击签约按钮。</string>
    <string name="online_info">主人，您可以点击咨询按钮与在线医生进行视频通话。</string>
    <string name="tips_test">主人，请点击您需要测量的项目</string>
    <string name="tips_open_device">主人，您可以打开设备开始测量了</string>
    <string name="tips_result_wendu" formatted="false">主人，您的体温是%1$s度，%2$s</string>
    <string name="tips_result_tizhong" formatted="false">主人，您的体重是%s公斤</string>
    <string name="tips_xueya">请将血压计佩戴在绑在左臂或者右臂上，高度与心脏平齐，手臂放松，手掌张开，按开始按钮开始测量</string>
    <string name="tips_result_xueya" formatted="false">主人，您的高压是%1$d, 低压是%2$d, 脉搏是%3$d, %4$s</string>
    <string name="tips_result_xuetang">主人，您的血糖值为%1$s,%2$s</string>
    <string name="tips_result_xueyang" formatted="false">主人，您的血氧饱和度为%1$s，%2$s</string>
    <string name="tips_result_niaosuan" formatted="false">主人，您的尿酸为%1$s,%2$s</string>
    <string name="tips_result_danguchun" formatted="false">主人，您的胆固醇为%1$s,%2$s</string>
    <string name="tips_result_xindian" formatted="false">主人，您的心率为%1$d, %2$s</string>
    <string name="tips_symptom">主人，请选择对应症状并提交</string>
    <string name="tips_symptom_result">主人，你有可能是%s</string>
    <string name="tips_error_temp">主人，温度测量不正常，请重新测试</string>
    <string name="tips_blue_connect">设备已连接</string>
    <string name="tips_blue_unConnect">设备已断开</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Compatable:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="app_id">59196d96</string>
    <string name="app_ids">59196d96</string>
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_title_iat_dwa">结果动态修正</string>
    <string-array name="engine_entries">
        <item>本地合成</item>
        <item>在线合成</item>
    </string-array>
    <string-array name="engine_values">
        <item>local</item>
        <item>cloud</item>
    </string-array>
    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string-array name="emot_entries">
        <item>正常</item>
        <item>高兴</item>
        <item>悲伤</item>
        <item>生气</item>
    </string-array>
    <string-array name="emot_values">
        <item>neutral</item>
        <item>happy</item>
        <item>sad</item>
        <item>angry</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>
    <string name="text_en_word">"[word]\napple\nbanana\norange"</string>
    <string name="text_en_sentence">"The quick brown fox jumps over the lazy dog."</string>
    <string name="text_cn_syllable">"知，痴，是"</string>
    <string name="text_cn_word">"磁铁，率领，脆弱，动手，古筝"</string>
    <string name="text_cn_sentence">"一座座雪峰插入云霄，峰顶银光闪闪，大大小小的湖泊，像颗颗宝石镶嵌在彩带般的沟谷中。"</string>
    <string-array name="ise_language_entries">
        <item>英语</item>
        <item>汉语</item>
    </string-array>
    <string-array name="ise_language_values">
        <item>en_us</item>
        <item>zh_cn</item>
    </string-array>
    <string-array name="category_entries">
        <item>单字</item>
        <item>词语</item>
        <item>句子</item>
    </string-array>
    <string-array name="category_values">
        <item>read_syllable</item>
        <item>read_word</item>
        <item>read_sentence</item>
    </string-array>
    <string-array name="result_level_entries">
        <item>plain</item>
        <item>complete</item>
    </string-array>
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="dwa_entries">
        <item>开启</item>
        <item>关闭</item>
    </string-array>
    <string name="text">
        主任医师，1982年本科毕业开始从事医学临床、教学及科研工作。1995年毕业于北京医科大学（现北京大学医学部）获医学硕士学位。主攻高血压、冠心病的诊断及治疗，擅长疑难病及危重急症的诊治。并从事冠心病的介入诊断及治疗，每年独立完成冠状动脉造影、PTCA或支架植入术500例以上。至今已在国内外杂志发表论文数十篇，为国内外多家杂志的审稿人。主持浙江省科技攻关项目、浙江省教育厅等多项课题，参编《儿科学词典》等著作。研究方向：高血压、冠心病的诊断及治疗。
    </string>
    <string name="out_hospital">出院注意事项</string>
    <string name="in_educate">入 院 教 育</string>
    <string name="list_load">下拉刷新/上拉加载</string>
    <string name="header_hint_normal">下拉刷新</string>
    <string name="header_hint_ready">松开刷新数据</string>
    <string name="header_hint_loading">正在加载...</string>
    <string name="healthy_shopping">健&#160;&#160;康&#160;&#160;商&#160;&#160;城</string>
    <string name="healthy_equ">健康药品</string>
    <string name="healthy_con">健康器材</string>
</resources>