<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b5dbf5">
    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="@drawable/bg_login"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:paddingLeft="5dp"
            android:maxLines="1"
            android:textColor="#333"
            android:textSize="16sp"
            android:inputType="phone"
            android:gravity="center_vertical"
            android:textColorHint="#ffaeadad"
            android:background="#fff"
            android:hint="@string/input_mobile"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:maxLines="1"
            android:textColor="#333"
            android:textSize="16sp"
            android:textColorHint="#ffaeadad"
            android:background="#fff"
            android:hint="@string/input_pwd"
            android:inputType="textPassword"
            android:gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/tv_register"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:textColor="#6bb7eb"
                android:gravity="center"
                android:text="@string/register"
                android:background="@drawable/shape_btn_register"
                android:layout_alignParentRight="true"/>
            <TextView
                android:id="@+id/btn_login"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#333"
                android:background="@drawable/shape_btn_login"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ll_login"
        android:layout_marginLeft="30dp"
        android:layout_gravity="right"
        android:layout_below="@+id/ll_login"
        android:gravity="center_vertical">
        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/i_agree"
            android:textColor="#333"/>
        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/agreement"
            android:textColor="#00f"/>
    </LinearLayout>
    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/sign_logo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="#fff"/>
    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="#fff"/>
</RelativeLayout>