<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="800dp"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:gravity="center"
    android:background="@drawable/shape_dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/change_account"
        android:textColor="#3F86FC"
        android:textSize="30sp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rl_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/view_login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/add_account"
            android:textSize="20sp"
            android:textColor="#fff"
            android:background="@drawable/shape_btn_login"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/logout"
            android:textColor="#abcadf"
            android:textSize="25sp" />

    </RelativeLayout>

</LinearLayout>