<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/icon_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_record"
            android:textColor="#686868"
            android:textSize="20sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_agreement"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <RadioGroup
                android:id="@+id/rg_tab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:checkedButton="@+id/rb_xueya">
                <RadioButton
                    android:id="@+id/rb_xueya"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:textColor="#333"
                    android:text="@string/xueya"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:background="@drawable/selector_btn_rect"/>
                <RadioButton
                    android:id="@+id/rb_xuetang"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:textColor="#333"
                    android:text="@string/xuetang"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:background="@drawable/selector_btn_rect"/>
                <RadioButton
                    android:id="@+id/rb_wendu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:textColor="#333"
                    android:text="@string/wendu"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:background="@drawable/selector_btn_rect"/>
                <RadioButton
                    android:id="@+id/rb_xueyang"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:textColor="#333"
                    android:text="@string/xueyang"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:background="@drawable/selector_btn_rect"/>
            </RadioGroup>
            <WebView
                android:id="@+id/wv_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </WebView>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>