<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/normal_bg"
    tools:context="com.example.han.referralproject.shopping.ShopListActivity">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_back" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/healthy_shopping"
        android:textColor="@color/white"
        android:textSize="40sp" />


    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/healthy_equ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthy_equ"
            android:textColor="#000000"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="5dp"
            android:src="#3E85FC"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/linearlayout"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="200dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/healthy_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthy_con"
            android:textColor="#000000"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/line_2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="5dp"
            android:src="#3E85FC"
            android:visibility="gone" />

    </LinearLayout>


</RelativeLayout>
